--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "axios": "^0.26.0",
         "mdbreact": "^5.2.0",
         "node-sass": "^6.0.0",
         "react": "^17.0.2",
